--- a/src/main/resources/templates/thymeleaf/info/Event_write.html
+++ b/src/main/resources/templates/thymeleaf/info/Event_write.html
@@ -30,7 +30,15 @@
 								<option selected>카테고리를 골라주세요</option>
 								<option value="공지">공지</option>
 								<option value="이벤트">이벤트</option>
-								<option value="여행지">여행지</option>
+								<option value="산">산</option>
+								<option value="바다">바다</option>
+								<option value="테마파크">테마파크</option>
+								<option value="엑티비티">엑티비티</option>
+								<option value="전통시장">전통시장</option>
+								<option value="실내">실내</option>
+								<option value="맛집">맛집</option>
+								<option value="카페">카페</option>
+								<option value="숙소">숙소</option>
 							</select> <label for="Event_category">카테고리</label>
 						</div>
 					</div>
