--- a/src/main/resources/templates/thymeleaf/aicc/aicc.html
+++ b/src/main/resources/templates/thymeleaf/aicc/aicc.html
@@ -382,13 +382,38 @@
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script>
 		var myCarousel = document.querySelector('#myCarousel')
 		var carousel = new bootstrap.Carousel(myCarousel, {
 			interval : 2000,
 			wrap : false
 		})
+		
+
+
+	</script>
+	<script>
+	// 체크박스 선택 개수를 저장하는 변수
+	var checkedCount = 0;
+	// 체크박스 클릭 이벤트 리스너 등록
+	document.querySelectorAll('input[type="checkbox"]').forEach(function(checkbox) {
+	    checkbox.addEventListener('click', function() {
+	        // 체크박스가 체크되었는지 확인하고 선택된 체크박스 개수 업데이트
+	        if (this.checked) {
+	            checkedCount++;
+	        } else {
+	            checkedCount--;
+	        }
+	        
+	        // 선택된 체크박스 개수가 4개를 초과하면 체크를 해제
+	        if (checkedCount > 4) {
+	            this.checked = false;
+	            checkedCount--;
+	            alert("최대 4개의 테마를 선택할 수 있습니다.");
+	        }
+	    });
+	});
 	</script>
 </body>
 </html>
