--- a/src/main/resources/templates/thymeleaf/info/Event_write_update.html
+++ b/src/main/resources/templates/thymeleaf/info/Event_write_update.html
@@ -18,19 +18,27 @@
 						
 						<div class="col-12">여행정보 글 이미지 미리보기</div>
 						<div class="form-floating mt-3">
-						<div class="col-12 text-start">이미지</div>
+						<div class="col-12 text-start">이미지(수정시 재등록 필수***)</div>
 							<input
 							type='file' class="form-control pt-3" onchange="readURL(this);"
-							name="Event_thumbnail" />
+							name="Event_thumbnail" th:value="*{Event_thumbnail}"/>
 							</div>
 					</div>
 					<div class="col-12">
 						<div class="form-floating">
 							 <select class="form-select" id="Event_category" aria-label="Floating label select example" name="Event_category">
 								<option >카테고리를 골라주세요</option>
-								<option value="공지" >공지</option>
+								<option value="공지">공지</option>
 								<option value="이벤트">이벤트</option>
-								<option value="여행지">여행지</option>
+								<option value="산">산</option>
+								<option value="바다">바다</option>
+								<option value="테마파크">테마파크</option>
+								<option value="엑티비티">엑티비티</option>
+								<option value="전통시장">전통시장</option>
+								<option value="실내">실내</option>
+								<option value="맛집">맛집</option>
+								<option value="카페">카페</option>
+								<option value="숙소">숙소</option>
 							</select> <label for="Event_category">카테고리</label>
 						</div>
 					</div>
