--- a/src/main/resources/templates/nav/nav.html
+++ b/src/main/resources/templates/nav/nav.html
@@ -45,9 +45,9 @@
         </ul>
       </div>
       <!-- nav 우측 -->
-      <div class="col nav-right d-flex align-items-center p-0">
+      <div class="col nav-right d-flex align-items-center p-0 me-2">
         <!-- lg 화면 이상에서 보일 영역 -->
-        <div class="col-12 d-none d-xl-flex d-flex justify-content-around align-items-center p-0">
+        <div class="col-12 d-none d-xl-flex justify-content-around align-items-center p-0 me-2">
           <!-- 서치 영역-->
           <div class="col-10 float-end nav-search-form">
             <form class="d-flex align-items-center" role="search">
