--- a/src/main/resources/static/css/feed.css
+++ b/src/main/resources/static/css/feed.css
@@ -6,18 +6,21 @@
   display: block;
 }
 /*feed box style*/
-.feed-box{
+#feed .feed-box{
 display:inline-block;
   box-sizing: border-box;
   width: 330px;
   margin-bottom: 12px;
   overflow: hidden;
+}
+
+.feed-box{
   border-radius: 12px;
   box-shadow: 2px 2px 20px rgba(0,0,0,.06),2px 2px 10px rgba(0,0,0,.04)
 }
 
 /* feed-box (center) */
-.feed-box-center{
+:not(#feedBox) .feed-box-center{
   height: 250px;
   object-fit: fill;
 }
@@ -120,3 +123,51 @@ display:inline-block;
 	border-radius: 10px;
 	border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
+
+/* ------------------------------------------- Feed Write ------------------------------------------- */
+/* 
+#feedWrite .feed-box-width{
+	width: 330px;
+} */
+
+/* feed thumbnail Btn */
+.feed-fileUpload{
+	position: absolute;
+	top: 50px;
+	left: 50px;
+	width: 70%;
+	height: 100%;
+	opacity: 0;
+	cursor: pointer;
+}
+
+/* #feedCarousel 으로 시작하는 것의 모든 */
+[id^="feedCarousel"] .carousel-indicators{
+/* 	bottom: 50%;
+	left: 50%;
+	margin-left: -115px;
+	margin-bottom: -120px; */
+	/* bottom: 125px; */
+}
+
+[id^="feedCarousel"] .carousel-indicators [data-bs-target] {
+	width: 8px;
+	height: 8px;
+    border-radius: 50%;
+    /* background-color: var(--black); */
+}
+
+[id^="feedCarousel"] .carousel{
+	width: 100%;
+}
+
+
+#feedWrite input[type=radio] {
+	display: none;
+}
+
+#feedWrite input[type="radio"]:checked + label{
+	background-color: var(--black);
+	color: var(--white);
+}
+
