--- a/src/main/resources/templates/head/head.html
+++ b/src/main/resources/templates/head/head.html
@@ -28,7 +28,7 @@
 	<!--css파일들-->
 	<link rel="stylesheet" href="../css/band_mediaQuery.css">
 	<link rel="stylesheet" href="../css/band.css">
-	<link rel="stylesheet" href="../css/bandFeedWrite.css">
+<!-- 	<link rel="stylesheet" href="../css/bandFeedWrite.css"> -->
 	<link rel="stylesheet" href="../css/bootstrap.css">
 	<link rel="stylesheet" href="../css/common.css">
 	<link rel="stylesheet" href="../css/feed.css">
