--- a/src/main/resources/templates/thymeleaf/feed/feed_show.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed_show.html
@@ -1,170 +1,226 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
-
 <div th:replace="~{head/head::head}"></div>
-
+<!-- 뒤로가기 버튼 flaticon ICON -->
+<link rel='stylesheet'
+	href='https://cdn-uicons.flaticon.com/2.1.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
+<link rel='stylesheet'
+	href='https://cdn-uicons.flaticon.com/2.1.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
+<link rel='stylesheet'
+	href='https://cdn-uicons.flaticon.com/2.1.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+<link rel='stylesheet'
+	href='https://cdn-uicons.flaticon.com/2.1.0/uicons-thin-straight/css/uicons-thin-straight.css'>
+<link rel='stylesheet'
+	href='https://cdn-uicons.flaticon.com/2.1.0/uicons-solid-straight/css/uicons-solid-straight.css'>
+<link rel='stylesheet'
+	href='https://cdn-uicons.flaticon.com/2.1.0/uicons-regular-straight/css/uicons-regular-straight.css'>
 <body>
 	<div th:replace="~{nav/nav::nav}"></div>
-	<div id="feed" class="container-fluid mt-4 mb-5">
-		<form action="/feed_write_action" method="post">
-		<div class=" px-2 pt-3">
-			<!--filtering-->
-			<div class="row px-0 hstack">
-				<div class="feed-filter col-8">
-					<div class="" id="list-tab" role="tablist">
-						<a class="btn rounded-pill px-3 active" id="feed-all-tag" data-bs-toggle="list" href="#feed-all" role="tab" aria-controls="feed-all">
-							전체
-						</a>
-						<a class="btn rounded-pill px-3" id="feed-theme-tag" data-bs-toggle="list" href="#feed-theme" role="tab" aria-controls="feed-theme">
-							테마여행 🌴
-						</a>
-						<a class="btn rounded-pill px-3" id="feed-area-tag" data-bs-toggle="list" href="#feed-area" role="tab" aria-controls="feed-area">
-							지역 🗺️
-						</a>
-					</div>
-				</div>
-				<!--상단 우측 드롭다운-->
-				<div class="col d-flex justify-content-end align-items-center">
-					<button class="btn btn-light rounded-pill dropdown-toggle px-3" type="button"
-						data-bs-toggle="dropdown" aria-expanded="false">
-						정렬
-					</button>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="#">추천</a></li>
-						<li><a class="dropdown-item" href="#">팔로잉</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<hr>
-		<div class="container feed-filter position-absolute px-3 ms-sm-2">
-			<div class="row">
-				<div class="col-10 col-md-12">
-					<div class="tab-content" id="nav-tabContent">
-					<!--테마 측 해시태그-->
-						<div class="tab-pane fade" id="feed-theme" role="tabpanel" aria-labelledby="feed-theme-tag">
-							<button type="button" class="btn btn-sm rounded-pill btn-dark me-1 mb-2 px-2">#전체</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#빅데이터 맛집</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#축제</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#공연</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#댕댕이랑</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#아이와함께</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#데이트</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#소개팅</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#친구와</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#효도여행</button>
-						</div>
-						<!--지역 측 해시태그-->
-						<div class="tab-pane fade" id="feed-area" role="tabpanel" aria-labelledby="feed-area-tag">
-							<button type="button" class="btn btn-sm rounded-pill btn-dark me-1 mb-2 px-2">#전체</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#강원</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#서울</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#경기</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#인천</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#층북</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#충남</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#세종</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#대전</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#경북</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#전북</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#대구</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#광주</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#경남</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#울산</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#부산</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#제주</button>
-							<button type="button" class="btn btn-sm rounded-pill btn-light me-1 mb-2 px-2">#울릉</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- 글쓰기 버튼 -->
-		<div
-			class=" sticky-top feed-write-btn ms-auto rounded-circle d-flex">
-			<a href="/feed_write" class="m-auto text-center">
-			<img src="../img/feed/edit.png" alt="" class="m-auto text-center"
-				width="21" height="21" /></a>
-		</div>
-		<!--------------------------------------------feed box Parent------------------------------------------>
-		<div class="m-auto mt-5 pt-5 pt-md-0">
-			<div class="card-columns justify-content-center align-items-start mt-3 m-0 row-box">
-				<!--feed box Start-->
-				<div class="col feed-box m-0 mb-3 px-0 no-gutters" th:each="feed : ${feedList}">
-					<!--feed box top-->
-					<div class="col-12 hstack feed-box-top pt-3 ps-3 z-3">
-						<img src="../img/feed/user_rabbit.jpg" class="float-start rounded-circle border me-3" width="50"
-							height="50" alt="">
-						<!--feed box text-->
-						<div class="col px-0">
-							<span class="float-start fw-bold f15" th:text="${feed.Member_Id}">박검지</span><br>
-							<span class="float-start text-muted f13">하이라이트</span>
-							<span class="float-start text-muted f13 ms-3">2시간 전</span>
-						</div>
-						<!-- 우측 버튼 -->
-						<div class="col-4 d-flex justify-content-end align-items-center pe-2">
-							<button type="button" class="btn btn-sm btn-dark">전체</button>
-							<span class="mx-2 f17">⋮</span>
-						</div>
-					</div>
-
-					<!-- feed box center | Carousel image -->
-					<div class="col-12 feed-box-center mt-3 d-flex align-items-center overflow-hidden">
-						<div th:id="'feedCarousel'+${feed.Feed_num}"
-							class="carousel slide" data-bs-ride="false">
-							<!-- carousel items loop -->
-							<div class="carousel-inner">
-								<div
-									th:each="thumbnail, thumbnailStat : ${#strings.arraySplit(feed.Feed_thumbnail, ',')}"
-									class="carousel-item p-0"
-									th:classappend="${thumbnailStat.index == 0} ? 'active' : ''">
-									<img th:src="@{'../img/feed_thumbnail/' + ${thumbnail}}"
-										class="d-block w-100 center-block" alt="#">
+	<div id="feedShow" class="container-fluid mt-4 mb-5 p-0">
+		<form action="/feed_update_action" method="post"
+			enctype="multipart/form-data">
+			<!-- 뒤로가기 버튼 -->
+			<button class="btn backBtn shadow-sm rounded-circle ms-4"
+				onclick="history.back()">
+				<i class="fi fi-sr-angle-small-left f22 text-center"></i>
+			</button>
+			<!--------------------------------------------feed box Parent------------------------------------------>
+			<div class="row m-auto my-2  mt-lg-1 mb-5 pt-md-0">
+				<div class="col-10 col-xl-7 mt-3 m-0 feed-box mx-auto">
+					<div class="row">
+						<div
+							class="col-12 col-md-6 feed-write-left feed-box p-0 feed-box-width overflow-hidden">
+							<!--feed box Start-->
+							<div class="col-12 m-0 mb-3 px-0 no-gutters m-auto">
+								<!--feed box top-->
+								<div class="col-12 hstack feed-box-top pt-3 ps-3 z-3">
+									<img
+										th:src="@{'../img/member_thumbnail/'+ ${feedList.getMember_profileimage()}}"
+										class="float-start rounded-circle border me-3" width="50"
+										height="50" alt=""><input type="hidden"
+										name="Member_profileimage"
+										th:value="${session.Member_profileimage}" />
+									<!--feed box text-->
+									<div class="col px-0">
+										<span class="float-start fw-bold f15"
+											th:text="${feedList.getMember_Id()}">사용자명</span><br> <span
+											class="float-start text-muted f13"
+											th:text="${feedList.getFeed_uploadday()}">올린 날짜</span>
+									</div>
+									<!-- 우측 버튼 -->
+									<div 
+										class="d-none col-4 d-sm-flex justify-content-end align-items-center pe-2">
+										<!-- session Id와 글쓴이가 일치할 때는 수정버튼 활성화 -->
+										<a th:if="${session.Member_Id == feedList.getMember_Id()}" th:href="@{'/feed_update?num='+${feedList.Feed_num}}" class="btn btn-sm btn-dark me-2">수정</a>
+										<!-- 다른 사람이 볼 때는 공유 -->
+										<a th:unless="${session.Member_Id == feedList.getMember_Id()}" href="#" class="me-2"><i class="fi fi-br-paper-plane d-flex align-items-center"></i></a>
+									</div>
+								</div>
+								<!-- feed box center | Carousel image -->
+								<div class="col-12 mt-3 overflow-hidden">
+									<div th:id="'feedCarousel'+${feedList.Feed_num}"
+										class="carousel slide" data-bs-ride="false">
+										<div
+											th:if="${#lists.size(#strings.arraySplit(feedList.getFeed_thumbnail(), ',')) > 1}"
+											class="carousel-indicators">
+											<button
+												th:each="thumbnail, thumbnailStat : ${#strings.arraySplit(feedList.getFeed_thumbnail(), ',')}"
+												type="button"
+												th:attr="data-bs-target='#feedCarousel'+${feedList.getFeed_num()}, data-bs-slide-to=${thumbnailStat.index}, 
+							                    class=${thumbnailStat.index == 0} ? 'active' : ''"
+												aria-current="true"></button>
+										</div>
+										<!-- carousel items loop -->
+										<div class="carousel-inner">
+											<div
+												th:each="thumbnail, thumbnailStat : ${#strings.arraySplit(feedList.getFeed_thumbnail(), ',')}"
+												class="carousel-item p-0"
+												th:classappend="${thumbnailStat.index==0} ? 'active' : ''">
+												<img th:src="@{'../img/feed_thumbnail/' + ${thumbnail}}"
+													class="d-block w-100" alt="#">
+											</div>
+										</div>
+										<!-- Carousel Prev/Next button -->
+										<div
+											th:if="${#lists.size(#strings.arraySplit(feedList.getFeed_thumbnail(), ','))>
+										 1}">
+											<button class="carousel-control-prev" type="button"
+												th:attr="data-bs-target='#feedCarousel'+${feedList.getFeed_num()}"
+												data-bs-slide="prev">
+												<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+												<span class="visually-hidden">Previous</span>
+											</button>
+											<button class="carousel-control-next" type="button"
+												th:attr="data-bs-target='#feedCarousel'+${feedList.getFeed_num()}"
+												data-bs-slide="next">
+												<span class="carousel-control-next-icon" aria-hidden="true"></span>
+												<span class="visually-hidden">Next</span>
+											</button>
+										</div>
+									</div>
+								</div>
+								<!--feed-box-center | text-->
+								<div class="col-12 feed-box-bot p-3">
+									<span class="fw-bold mb-1 d-block"
+										th:text="${feedList.getFeed_title()}">맥주 맛집🍺✨</span> <span
+										class="f13" th:text="${feedList.getFeed_content()}">
+										맥주는 왜 먹어도 먹어도 맛있을까요? </span>
+								</div>
+								<!--feed box bot | #TAG -->
+								<div class="col feed-tag-box p-4 text-muted f13 d-flex gap-1">
+									<span class="btn btn-main btn-sm rounded-pill"
+										th:text="${feedList.getFeed_area()}">지역태그</span> <span
+										class="btn btn-skyb btn-sm rounded-pill"
+										th:text="${feedList.getFeed_theme()}">테마태그</span>
 								</div>
 							</div>
-							<!-- Carousel indicators -->
-							<div th:if="${#lists.size(#strings.arraySplit(feed.Feed_thumbnail, ',')) > 1}">
-								<button class="carousel-control-prev" type="button"
-									th:attr="data-bs-target='#feedCarousel'+${feed.Feed_num}"
-									data-bs-slide="prev">
-									<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-									<span class="visually-hidden">Previous</span>
-								</button>
-								<button class="carousel-control-next" type="button"
-									th:attr="data-bs-target='#feedCarousel'+${feed.Feed_num}"
-									data-bs-slide="next">
-									<span class="carousel-control-next-icon" aria-hidden="true"></span>
-									<span class="visually-hidden">Next</span>
-								</button>
+							<!--feed box bot | text-->
+							<div
+								class="col-12 feed-box-bot hstack p-3 border-top text-muted f13">
+								<div class="col-6 hstack justify-content-center border-end">
+									<span>담기</span>
+								</div>
+								<div class="col-6 hstack justify-content-center">
+									<i class="bi bi-heart"></i><span>좋아요</span><span class="ms-2">9999+</span>
+								</div>
 							</div>
+							<!-- tag row -->
+							<!-- col -->
+						</div>
+						<!-- 댓글 -->
+						<div class="col p-4">
+							<p>댓글</p>
+							<div class="d-flex align-items-center gap-2">
+								<div class="col flex-grow-0 p-0">
+									<img
+										th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}"
+										class="float-start rounded-circle border" width="45"
+										height="45" alt=""><input type="hidden"
+										name="Member_profileimage"
+										th:value="${session.Member_profileimage}" />
+								</div>
+								<div class="col flex-grow-1 p-0">
+									<input type="text" class="form-control" />
+								</div>
+								<div
+									class="col-2 flex-shrink-0 d-sm-flex justify-content-end align-items-center p-0 h-100">
+									<button type="submit"
+										class="btn btn-sm btn-dark w-100 h-100 py-2">등록</button>
+								</div>
+							</div>
+							<hr />
+							<!-- 사용자 댓글 -->
+							<div class="row gap-3 px-2">
+								<div class="d-flex align-items-start gap-2">
+									<div class="col flex-grow-0 p-0 mt-1">
+										<img
+											th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}"
+											class="float-start rounded-circle border" width="36"
+											height="36" alt=""><input type="hidden"
+											name="Member_profileimage"
+											th:value="${session.Member_profileimage}" />
+									</div>
+									<div class="col flex-grow-1 p-0 f14">
+										<strong><span class="">장창엽</span></strong> <span
+											class="ms-1 text-muted f12">댓글 단 시간</span> <span
+											class="f14 d-block">오늘 쫌 힘드네여</span>
+									</div>
+									<div
+										class="col-2 flex-shrink-0 d-sm-flex justify-content-end align-items-center p-0 h-100 mt-1 text-end">
+										<input type="submit" id="feed-herat" class="h-100 py-2 d-none" /><label
+											for="feed-heart"><i class="fi fi-br-heart"></i></label>
+									</div>
+								</div>
+								<!-------------------------------->
+								<div class="d-flex align-items-start gap-2">
+									<div class="col flex-grow-0 p-0 mt-1">
+										<img
+											th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}"
+											class="float-start rounded-circle border" width="36"
+											height="36" alt=""><input type="hidden"
+											name="Member_profileimage"
+											th:value="${session.Member_profileimage}" />
+									</div>
+									<div class="col flex-grow-1 p-0">
+										<strong><span class="f14 d-block">이지후</span></strong> <span
+											class="f14 d-block">저도 힘드네요</span>
+									</div>
+									<div
+										class="col-2 flex-shrink-0 d-sm-flex justify-content-end align-items-center p-0 h-100 mt-1 text-end">
+										<input type="submit" id="feed-herat" class="h-100 py-2 d-none" /><label
+											for="feed-heart"><i class="fi fi-rr-heart"></i></label>
+									</div>
+								</div>
+								<!-------------------------------->
+								<div class="d-flex align-items-start gap-2">
+									<div class="col flex-grow-0 p-0 mt-1">
+										<img
+											th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}"
+											class="float-start rounded-circle border" width="36"
+											height="36" alt=""><input type="hidden"
+											name="Member_profileimage"
+											th:value="${session.Member_profileimage}" />
+									</div>
+									<div class="col flex-grow-1 p-0">
+										<strong><span class="f14 d-block">박검지</span></strong> <span
+											class="f14 d-block">저는 괜찮아요</span>
+									</div>
+									<div
+										class="col-2 flex-shrink-0 d-sm-flex justify-content-end align-items-center p-0 h-100 mt-1 text-end">
+										<button type="button"
+											class="btn btn-close btn-sm rounded-circle"
+											aria-label="Close"></button>
+									</div>
+								</div>
+							</div>
+
 						</div>
 					</div>
-					
-					<!--feed-box-bot | text-->
-					<div class="col-12 feed-box-bot p-3">
-						<span class="fw-bold mb-1" th:text="${feed.Feed_title}">맥주 맛집🍺✨</span>
-						<span class="f13" th:text="${feed.Feed_content}">
-							맥주는 왜 먹어도 먹어도 맛있을까요?
-						</span>
-					</div>
-					<!--feed box bot | text-->
-					<div class="col-12 feed-box-bot hstack p-3 border-top text-muted f13">
-						<div class="col-6 hstack justify-content-center border-end">
-							<span>담기</span>
-						</div>
-						<div class="col-6 hstack justify-content-center">
-							<i class="bi bi-heart"></i>
-							<span>좋아요</span>
-							<span class="ms-2">9999+</span>
-						</div>
-					</div>
+					<!-- row -->
 				</div>
-			</div><!--row-->
-			<!---------------------------------------------------------------------------->
-		</div><!--container-->
+				<!---------------------------------------------------------------------------->
 		</form>
 	</div>
 	<div th:replace="~{footer/footer::footer}"></div>
 </body>
-
 </html>
