--- a/src/main/resources/static/css/myBand.css
+++ b/src/main/resources/static/css/myBand.css
@@ -42,6 +42,7 @@ div.myBand_title_img>img{
 /* 밴드 멤버 수 스타일 */
 div.myBand_member_count{
     margin-bottom: 10px;
+    cursor: pointer;
 }
 div.myBand_info{
     margin-bottom: 20px;
@@ -121,3 +122,61 @@ div.myBand_content_item_content img{
 .join_band_item{
 	min-width: 220px;
 	}
+
+/* 밴드 채팅 스타일 */
+.band_chatBox, .myBand_content_col_titleBox, .myBand_content_col_content{
+	border : 1px solid red;
+}
+.band_chatBox{
+	position : relative;
+}
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ 
+	mybandMember 페이지 스타일 
+ @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+ 
+ 
+ /* 멤버 리스트 스타일 */
+ div.myBand_memberListBox{
+ 	border : 1px solid blue;
+ }
+ 
+ div.myBand_memberList_item{
+ 	border-bottom : 1px solid lightgray;
+ 	position : relative;
+ }
+ 
+ /* 멤버 검색 스타일 */
+ div.myBandMember_memberSearch{
+ 	position : relative;
+ }
+ div.myBandMember_memberSearch>button{
+	position : absolute;
+	top : 21px;
+	right : 10px;
+ }
+ 
+ /* 멤버 이미지 스타일 */
+ div.myBand_memberList_item_img{
+ 	display : inline-block;
+ 	width: 70px;
+ 	height: 70px;
+ 	
+ }
+ div.myBand_memberList_item_img>img{
+ 	display : block;
+ 	width: 100%;
+ 	height: 100%;
+ 	border-radius: 100%;
+ }
+ 
+ /* 1:1대화 하기 버튼 */
+div.band_chat_startBtn{
+	position : absolute;
+	right : 0px;
+	bottom : 30px;
+}
+
+div.bandChat_listContent{
+	border : 1px solid blue;
+}
