--- a/src/main/resources/templates/thymeleaf/band/band.html
+++ b/src/main/resources/templates/thymeleaf/band/band.html
@@ -40,7 +40,7 @@
 		                </div> 
 		            </a>
                 </div>
-
+				
             </div>
         </div> <!-- join_band_wapper -->
 
@@ -56,7 +56,7 @@
                 <!-- 밴드 추천 리스트 -->
                 <div class="row band_recomandBox">
     
-                    <div class="col-lg-6 col-md-12 band_recomand_item " th:each ="bandList:${bandList}">
+                    <div class="col-lg-6 col-md-12 band_recomand_item " th:each ="bandList:${randomBandList}">
 	                    <a  th:href="@{'myBand?bandUrl='+ ${bandList.getBand_code()}}" class="band_recomand_link d-flex">
 	                        <div class="band_recomand_img">
 	                            <img th:src="@{'../img/uploadBandThumnail/'+ ${bandList.getBand_thumnail()}}" class=" join_band_item_img" alt="...">
