--- a/src/main/resources/templates/thymeleaf/band/bandChat.html
+++ b/src/main/resources/templates/thymeleaf/band/bandChat.html
@@ -3,6 +3,12 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <div th:replace="~{head/head::head}"></div>
 <body>
+<script th:inline="javascript">
+		var loginId = /*[[${session.Member_Id}]]*/ "";
+		if (loginId == null || loginId.trim() == '') {
+			window.location.href = "/login?msg=5";
+		}
+	</script>
 <div th:replace="~{nav/nav::nav}"></div>
     <div class="myBand_wrapper">
         <!-- myBand lnb 영역 
@@ -89,45 +95,26 @@
 				</div> <!-- myBand_content_col_titleBox : 밴드 정보 -->
 
 
-				<!-- col2 밴드 게시글 영역 -->
+				<!-- col2 채팅 출력 영역 -->
                 <div class="col-12 col-lg-7 myBand_content_col_content mt-5" >
                    <!--  <div class="myBand_content_search">
                         <span>글 내용, #태그, @작성자 검색</span>
                         <img class="search_img" src="../img/common/btn_header_search.png" alt="">
                         <span th:text="${feedwriterImg.getMember_profileimage()}"></span>
                     </div> -->
-                    <div class="myBand_content_item " th:each="myBandFeedList:${myBandFeedList}">
-                        <div class="myBand_content_item_writer">
-                            <img class="myBand_content_item_writer_profile" th:src="@{'../img/member_thumbnail/'+${myBandFeedList.getMember_profileimage()}}"  alt="#">
-                            <div class="myBand_content_item_writer_info">
-                                <strong th:text="${myBandFeedList.getMember_id()}">작성자 아이디</strong>
-                                <span>작성 시간 <span th:text="${myBandFeedList.getBand_feed_uploadday()}"></span></span>
-                            </div>
-                        </div>
-                        <div class="myBand_content_item_content">
-							<div th:utext="${myBandFeedList.getBand_feed_content()}"></div> 
-                          
-                        </div>
-                        <div class="myBand_content_item">
-                        <span th:text="${myBandFeedList.getMember_id()}" ></span>
-                        <span th:text="${session.Member_Id}" ></span>
-                        	<th:block th:if="${myBandFeedList.getMember_id() == session.Member_Id}">
-                        		<form action="bandFeedUpdate" method="post">
-                        			<input type="hidden" name="bandUrl" th:value="${myBandFeedList.getBand_code()}"/>
-                        			<input type="hidden" name="bandfeednum" th:value="${myBandFeedList.getBand_feed_num()}"/>
-                        			<input type="hidden" name="member_id" th:value="${session.Member_Id}" />
-                        			<input type="hidden" name="feedcontent" th:value="${myBandFeedList.getBand_feed_content()}" />
-                        			<input type="submit" class="btn btn-info float-end" value="수정하기" />
-                        		</form>
-                        		
-                        		<form action="deleteFeed" method="post" id="deleteFeedForm">
-                        			<input type="hidden" name="bandUrl" th:value="${myBandFeedList.getBand_code()}"/>
-                        			<input type="hidden" name="bandfeednum" th:value="${myBandFeedList.getBand_feed_num()}"/>
-                        			<input type="button" class="btn btn-danger float-end bandFeedDeleteBtn" value="삭제하기" onclick="return func_deleteFeed()"/>
-                        		</form>
-                        	</th:block>
-                        </div>
+                    
+                    <!-- 채팅박스 -->
+                    <div class="bandChat_listBox px-3">
+                    	<div class="bandChat_listTitle bg-skyb py-2 text-center">
+                    		<span class="text-center f22" th:text="${partnerId}"></span> <br />
+                    		<small class="text-muted" th:text="${myBandList.getBand_name()}"></small>
+                    	</div>
+                    	
+                    	<div class="bandChat_listContent">
+                    		
+                    	</div>
                     </div>
+                    
                 </div>
 					
                 
