--- a/src/main/resources/templates/thymeleaf/band/myBand_member.html
+++ b/src/main/resources/templates/thymeleaf/band/myBand_member.html
@@ -3,7 +3,14 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <div th:replace="~{head/head::head}"></div>
 <body>
-<div th:replace="~{nav/nav::nav}"></div>
+	<script th:inline="javascript">
+		var loginId = /*[[${session.Member_Id}]]*/ "";
+		if (loginId == null || loginId.trim() == '') {
+			window.location.href = "/login?msg=5";
+		}
+	</script>
+	
+	<div th:replace="~{nav/nav::nav}"></div>
     <div class="myBand_wrapper">
         <!-- myBand lnb 영역 
         <div class="myBand_pc_lnb">
@@ -30,12 +37,11 @@
 						<div class="myBand_title_name">
 							<h3 th:text="${myBandList.getBand_name()}"></h3>
 						</div>
-						<div id="myBand_member_countBtn" class="myBand_member_count" onclick="return func_bandMember()">
+						<div class="myBand_member_count">
 							<a class="myBandLink" th:href="@{'/mybandMember?bandUrl='+${myBandList.getBand_code()}}">
 								<span th:text="|멤버  ${myBandList.getBand_memberCount()} 명|"></span>
-							</a>
+							</a>							
 						</div>
-						
 						<div class="myBand_info">
 							<span th:text="${myBandList.getBand_content()}"></span>
 						</div>
@@ -89,50 +95,65 @@
 				</div> <!-- myBand_content_col_titleBox : 밴드 정보 -->
 
 
-				<!-- col2 밴드 게시글 영역 -->
-                <div class="col-12 col-lg-7 myBand_content_col_content mt-5" >
+				<!-- col2 가입한 멤버 출력 영역 -->
+                <div class="col-12 col-lg-8 myBand_content_col_content mt-3 px-3" >
                    <!--  <div class="myBand_content_search">
                         <span>글 내용, #태그, @작성자 검색</span>
                         <img class="search_img" src="../img/common/btn_header_search.png" alt="">
                         <span th:text="${feedwriterImg.getMember_profileimage()}"></span>
                     </div> -->
-                    <div class="myBand_content_item " th:each="myBandFeedList:${myBandFeedList}">
-                        <div class="myBand_content_item_writer">
-                            <img class="myBand_content_item_writer_profile" th:src="@{'../img/member_thumbnail/'+${myBandFeedList.getMember_profileimage()}}"  alt="#">
-                            <div class="myBand_content_item_writer_info">
-                                <strong th:text="${myBandFeedList.getMember_id()}">작성자 아이디</strong>
-                                <span>작성 시간 <span th:text="${myBandFeedList.getBand_feed_uploadday()}"></span></span>
-                            </div>
-                        </div>
-                        <div class="myBand_content_item_content">
-							<div th:utext="${myBandFeedList.getBand_feed_content()}"></div> 
-                          
-                        </div>
-                        <div class="myBand_content_item">
-                        <span th:text="${myBandFeedList.getMember_id()}" ></span>
-                        <span th:text="${session.Member_Id}" ></span>
-                        	<th:block th:if="${myBandFeedList.getMember_id() == session.Member_Id}">
-                        		<form action="bandFeedUpdate" method="post">
-                        			<input type="hidden" name="bandUrl" th:value="${myBandFeedList.getBand_code()}"/>
-                        			<input type="hidden" name="bandfeednum" th:value="${myBandFeedList.getBand_feed_num()}"/>
-                        			<input type="hidden" name="member_id" th:value="${session.Member_Id}" />
-                        			<input type="hidden" name="feedcontent" th:value="${myBandFeedList.getBand_feed_content()}" />
-                        			<input type="submit" class="btn btn-info float-end" value="수정하기" />
-                        		</form>
-                        		
-                        		<form action="deleteFeed" method="post" id="deleteFeedForm">
-                        			<input type="hidden" name="bandUrl" th:value="${myBandFeedList.getBand_code()}"/>
-                        			<input type="hidden" name="bandfeednum" th:value="${myBandFeedList.getBand_feed_num()}"/>
-                        			<input type="button" class="btn btn-danger float-end bandFeedDeleteBtn" value="삭제하기" onclick="return func_deleteFeed()"/>
-                        		</form>
-                        	</th:block>
-                        </div>
-                    </div>
-                </div>
 					
-                
+					<div class="myBand_memberListBox w-100">
+						<!-- 멤버 수, 멤버 찾기 영역  -->
+						<div class="myBand_memberList_header p-3 f22">
+							<div class="myBandMemberCount">
+								<span class="d-inline-block me-3 fw-bold">멤버</span><span
+									th:text="${myBandList.getBand_memberCount()}"></span>
+							</div>
+							<div class="myBandMember_memberSearch">
+								<input type="search" class="w-100 my-3 ps-3 py-1 f17" placeholder="멤버 검색" /> 
+								<button class="nav-right-btn navbar-search-lg float-end" type="submit">Search</button>
+							</div>
+						</div>
+						<hr class="mt-0" />
+						
+						
+						<!-- 밴드를 가입한 멤버 출력 영역 -->
+						<div class="px-3">
+							<p class="fw_bold">멤버</p>
+							<div class="myBand_memberList_item p-3 d-flex flex-row"
+								th:each="joinMemberList : ${joinMemberList}">
+								<div class="myBand_memberList_item_img">
+									<img
+										th:src="@{'../img/member_thumbnail/'+${joinMemberList.getMember_profileimage()}}"
+										alt="멤버 이미지" />
+								</div>
+								<div class="myBand_memberList_item_id ms-3 f20 my-auto  float-end">
+									<span th:text="${joinMemberList.getMember_Id()}" th:data-memberid="${joinMemberList.getMember_Id()}"></span>
+								</div>
+								<div class="myBand_memberList_item_chat my-auto">
+									<th:block
+										th:if="${session.Member_Id ne joinMemberList.getMember_Id()}">
+										<div
+											class="band_chat_startBtn btn float-end  bg-mainbg" >
+											<form action="/bandChat" method="post" id="bandChatForm">
+												<input name="bandUrl" type="hidden" th:value="${joinMemberList.getBand_code()}" />
+												<input name="partnerId" type="hidden" th:value="${joinMemberList.getMember_Id()}"/>
+												<input type="submit" value="1:1 대화" class="btn p-0" />
+											</form>
+											
+										</div>
+									</th:block>
+								</div>
 
-            </div>  <!-- myBand_contentBox -->
+							</div>
+						</div>
+
+					</div> <!-- myBand_memberListBox -->
+					
+                </div> <!-- myBand_content_col_content -->
+					
+           </div>  <!-- myBand_contentBox -->
         </div>
 
 
@@ -166,10 +187,10 @@
 	    	}
 	    }
 	    
-	    function func_bandMember(){
-	    	
-	    }
-	    
+
+	
 	</script>
+	
+	
 </body>
 </html>
