--- a/src/main/resources/templates/head/head.html
+++ b/src/main/resources/templates/head/head.html
@@ -50,6 +50,7 @@
 	<script src="../js/home.js"></script>
 	<script src="../js/nav.js"></script>
 	<script src="../validate/member_validate.js"></script>
+	<script src="../validate/feed_validate.js"></script>
 	<!-- include summernote css/js -->
 <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
