--- a/src/main/resources/templates/thymeleaf/feed/feed2.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed2.html
@@ -85,9 +85,9 @@
     <div class="m-auto mt-5 pt-5 pt-md-0">
         <div class="card-columns justify-content-center align-items-start mt-3 m-0 row-box">
             <!--feed box Start-->
-            <div class="col feed-box m-0 mb-3 px-0 no-gutters" th:each="feed : ${feedList}">
+            <div class="col feed-box m-0 my-3 px-0 no-gutters" th:each="feed : ${feedList}">
                     <!--feed box top-->
-                    <div class="col-12 hstack feed-box-top pt-3 ps-3 z-3">
+                    <div class="col-12 hstack feed-box-top py-3 px-3 z-3">
                         <img src="../img/feed/user_rabbit.jpg" class="float-start rounded-circle border me-3" width="50"
                              height="50" alt="">
                         <!--feed box text-->
@@ -98,28 +98,25 @@
                                 class="float-start text-muted f13 ms-3">2시간 전</span>
                         </div>
                         <!-- 우측 버튼 -->
-                        <div class="col-4 d-flex justify-content-end align-items-center pe-2">
-                            <a th:href="@{'/feed_show?num='+${feed.Feed_num}}">
+                        <div class="col-4 d-flex justify-content-end align-items-center">
+                            <a th:href="@{'/feed_show?num='+${feed.Feed_num}}" class="">
                             	<button type="button" class="btn btn-sm btn-dark">전체</button>
                             </a>
-                            <div class="mx-2 f17">
-								<a class="btn btn-secondary dropdown-toggle" href="#"
+                            <div th:if="${session.Member_Id == feed.Member_Id}">
+                            <div class="f17" id="feed-right">
+								<a class="dropdown-toggle text-center m-0 ps-3" href="#"
 									role="button" id="dropdownMenuLink" data-bs-toggle="dropdown"
-									aria-expanded="false"> ⋮ </a>
+									aria-expanded="false"></a>
 								<ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item active" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Separated link</a></li>
+                                    <li><a class="dropdown-item active" th:href="@{'/delFeed?num='+${feed.Feed_num}}">삭제</a></li>
+                                    <li><a class="dropdown-item" th:href="@{'/feed_update?num='+${feed.Feed_num}}">수정</a></li>
                                 </ul>
+                            </div>
                             </div>
                         </div>
                     </div>
                     <!-- feed box center | Carousel image -->
-                    <div class="col-12 feed-box-center mt-3 d-flex justify-content-center align-items-center overflow-hidden">
+                    <div class="col-12 feed-box-center d-flex justify-content-center align-items-center overflow-hidden">
                         <div th:id="'feedCarousel'+${feed.Feed_num}" class="carousel slide" data-bs-ride="false">
                             <!-- carousel items loop -->
                             <div class="carousel-inner">
@@ -127,12 +124,11 @@
                                      class="carousel-item p-0"
                                      th:classappend="${thumbnailStat.index==0} ? 'active' : ''">
                                     <img th:src="@{'../img/feed_thumbnail/' + ${thumbnail}}"
-                                         class="d-block w-100 center-block" alt="#">
+                                         class="d-block w-100" alt="#">
                                 </div>
                             </div>
                             <!-- Carousel Prev/Next button -->
-                            <div th:if="${#lists.size(#strings.arraySplit(feed.Feed_thumbnail, ','))>
-							 1}">
+                            <div th:if="${#lists.size(#strings.arraySplit(feed.Feed_thumbnail, ','))>1}">
                                 <button class="carousel-control-prev" type="button"
                                         th:attr="data-bs-target='#feedCarousel'+${feed.Feed_num}" data-bs-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -148,9 +144,8 @@
                     </div>
                     <!--feed-box-bot | text-->
                     <div class="col-12 feed-box-bot p-3">
-                        <span class="fw-bold mb-1" th:text="${feed.Feed_title}">맥주 맛집🍺✨</span><span class="f13"
-                                                                                                    th:text="${feed.Feed_content}">
-					맥주는 왜 먹어도 먹어도 맛있을까요? </span>
+                        <span class="fw-bold mb-1" th:text="${feed.Feed_title}">맥주 맛집🍺✨</span>
+                        <span class="f13" th:text="${feed.Feed_content}">맥주는 왜 먹어도 먹어도 맛있을까요? </span>
                     </div>
                     <!--feed box bot | text-->
                     <div class="col-12 feed-box-bot hstack p-3 border-top text-muted f13">
