--- a/src/main/resources/templates/thymeleaf/feed/feed_show.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed_show.html
@@ -1,226 +1,168 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
-<div th:replace="~{head/head::head}"></div>
+<div th:replace="~{head/head::head}">
+</div>
 <!-- 뒤로가기 버튼 flaticon ICON -->
-<link rel='stylesheet'
-	href='https://cdn-uicons.flaticon.com/2.1.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
-<link rel='stylesheet'
-	href='https://cdn-uicons.flaticon.com/2.1.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
-<link rel='stylesheet'
-	href='https://cdn-uicons.flaticon.com/2.1.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
-<link rel='stylesheet'
-	href='https://cdn-uicons.flaticon.com/2.1.0/uicons-thin-straight/css/uicons-thin-straight.css'>
-<link rel='stylesheet'
-	href='https://cdn-uicons.flaticon.com/2.1.0/uicons-solid-straight/css/uicons-solid-straight.css'>
-<link rel='stylesheet'
-	href='https://cdn-uicons.flaticon.com/2.1.0/uicons-regular-straight/css/uicons-regular-straight.css'>
+<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
+<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
+<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-thin-straight/css/uicons-thin-straight.css'>
+<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-solid-straight/css/uicons-solid-straight.css'>
+<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-regular-straight/css/uicons-regular-straight.css'>
 <body>
-	<div th:replace="~{nav/nav::nav}"></div>
-	<div id="feedShow" class="container-fluid mt-4 mb-5 p-0">
-		<form action="/feed_update_action" method="post"
-			enctype="multipart/form-data">
-			<!-- 뒤로가기 버튼 -->
-			<button class="btn backBtn shadow-sm rounded-circle ms-4"
-				onclick="history.back()">
-				<i class="fi fi-sr-angle-small-left f22 text-center"></i>
-			</button>
-			<!--------------------------------------------feed box Parent------------------------------------------>
-			<div class="row m-auto my-2  mt-lg-1 mb-5 pt-md-0">
-				<div class="col-10 col-xl-7 mt-3 m-0 feed-box mx-auto">
-					<div class="row">
-						<div
-							class="col-12 col-md-6 feed-write-left feed-box p-0 feed-box-width overflow-hidden">
-							<!--feed box Start-->
-							<div class="col-12 m-0 mb-3 px-0 no-gutters m-auto">
-								<!--feed box top-->
-								<div class="col-12 hstack feed-box-top pt-3 ps-3 z-3">
-									<img
-										th:src="@{'../img/member_thumbnail/'+ ${feedList.getMember_profileimage()}}"
-										class="float-start rounded-circle border me-3" width="50"
-										height="50" alt=""><input type="hidden"
-										name="Member_profileimage"
-										th:value="${session.Member_profileimage}" />
-									<!--feed box text-->
-									<div class="col px-0">
-										<span class="float-start fw-bold f15"
-											th:text="${feedList.getMember_Id()}">사용자명</span><br> <span
-											class="float-start text-muted f13"
-											th:text="${feedList.getFeed_uploadday()}">올린 날짜</span>
-									</div>
-									<!-- 우측 버튼 -->
-									<div 
-										class="d-none col-4 d-sm-flex justify-content-end align-items-center pe-2">
-										<!-- session Id와 글쓴이가 일치할 때는 수정버튼 활성화 -->
-										<a th:if="${session.Member_Id == feedList.getMember_Id()}" th:href="@{'/feed_update?num='+${feedList.Feed_num}}" class="btn btn-sm btn-dark me-2">수정</a>
-										<!-- 다른 사람이 볼 때는 공유 -->
-										<a th:unless="${session.Member_Id == feedList.getMember_Id()}" href="#" class="me-2"><i class="fi fi-br-paper-plane d-flex align-items-center"></i></a>
-									</div>
+<div th:replace="~{nav/nav::nav}">
+</div>
+<div id="feedShow" class="container-fluid mt-4 mb-5 p-0">
+	<!-- 뒤로가기 버튼 -->
+	<a href="/feed" class="btn backBtn shadow-sm rounded-circle ms-4">
+	<i class="fi fi-sr-angle-small-left f22 text-center"></i>
+	</a>
+	<!--------------------------------------------feed box Parent------------------------------------------>
+	<div class="row m-auto my-2 mt-lg-1 mb-5 pt-md-0">
+		<div class="col-10 col-xl-7 mt-3 feed-box m-0 mx-auto">
+			<div class="row">
+				<!-- 좌측 | 피드 -->
+					<div class="col-12 col-md-6 feed-write-left feed-box p-0 feed-box-width overflow-hidden">
+					<form action="/feed_update_action" method="post" enctype="multipart/form-data">
+						<!--feed box Start-->
+						<div class="col-12 m-0 mb-3 px-0 no-gutters m-auto">
+							<!--feed box top-->
+							<div class="col-12 hstack feed-box-top p-3 ps-3 z-3">
+								<img th:src="@{'../img/member_thumbnail/'+ ${feedList.getMember_profileimage()}}" class="float-start rounded-circle border me-3" width="50" height="50" alt=""><input type="hidden" name="Member_profileimage" th:value="${session.Member_profileimage}"/>
+								<!--feed box text-->
+								<div class="col px-0">
+									<span class="float-start fw-bold f15" th:text="${feedList.getMember_Id()}">사용자명</span><br>
+									<span class="float-start text-muted f13" th:text="${feedList.getFeed_uploadday()}">올린 날짜</span>
 								</div>
-								<!-- feed box center | Carousel image -->
-								<div class="col-12 mt-3 overflow-hidden">
-									<div th:id="'feedCarousel'+${feedList.Feed_num}"
-										class="carousel slide" data-bs-ride="false">
-										<div
-											th:if="${#lists.size(#strings.arraySplit(feedList.getFeed_thumbnail(), ',')) > 1}"
-											class="carousel-indicators">
-											<button
-												th:each="thumbnail, thumbnailStat : ${#strings.arraySplit(feedList.getFeed_thumbnail(), ',')}"
-												type="button"
-												th:attr="data-bs-target='#feedCarousel'+${feedList.getFeed_num()}, data-bs-slide-to=${thumbnailStat.index}, 
-							                    class=${thumbnailStat.index == 0} ? 'active' : ''"
-												aria-current="true"></button>
-										</div>
-										<!-- carousel items loop -->
-										<div class="carousel-inner">
-											<div
-												th:each="thumbnail, thumbnailStat : ${#strings.arraySplit(feedList.getFeed_thumbnail(), ',')}"
-												class="carousel-item p-0"
-												th:classappend="${thumbnailStat.index==0} ? 'active' : ''">
-												<img th:src="@{'../img/feed_thumbnail/' + ${thumbnail}}"
-													class="d-block w-100" alt="#">
-											</div>
-										</div>
-										<!-- Carousel Prev/Next button -->
-										<div
-											th:if="${#lists.size(#strings.arraySplit(feedList.getFeed_thumbnail(), ','))>
-										 1}">
-											<button class="carousel-control-prev" type="button"
-												th:attr="data-bs-target='#feedCarousel'+${feedList.getFeed_num()}"
-												data-bs-slide="prev">
-												<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-												<span class="visually-hidden">Previous</span>
-											</button>
-											<button class="carousel-control-next" type="button"
-												th:attr="data-bs-target='#feedCarousel'+${feedList.getFeed_num()}"
-												data-bs-slide="next">
-												<span class="carousel-control-next-icon" aria-hidden="true"></span>
-												<span class="visually-hidden">Next</span>
-											</button>
-										</div>
-									</div>
-								</div>
-								<!--feed-box-center | text-->
-								<div class="col-12 feed-box-bot p-3">
-									<span class="fw-bold mb-1 d-block"
-										th:text="${feedList.getFeed_title()}">맥주 맛집🍺✨</span> <span
-										class="f13" th:text="${feedList.getFeed_content()}">
-										맥주는 왜 먹어도 먹어도 맛있을까요? </span>
-								</div>
-								<!--feed box bot | #TAG -->
-								<div class="col feed-tag-box p-4 text-muted f13 d-flex gap-1">
-									<span class="btn btn-main btn-sm rounded-pill"
-										th:text="${feedList.getFeed_area()}">지역태그</span> <span
-										class="btn btn-skyb btn-sm rounded-pill"
-										th:text="${feedList.getFeed_theme()}">테마태그</span>
+								<!-- 우측 버튼 -->
+								<div class="col d-flex justify-content-end align-items-center">
+									<!-- session Id와 글쓴이가 일치할 때는 수정버튼 활성화 -->
+									<a th:if="${session.Member_Id==feedList.getMember_Id()}" th:href="@{'/feed_update?num='+${feedList.Feed_num}}" class="btn btn-sm btn-dark me-2">수정</a>
+									<!-- 다른 사람이 볼 때는 공유 -->
+									<a th:unless="${session.Member_Id==feedList.getMember_Id()}" href="#" class="p-2"><i class="fi fi-br-paper-plane d-flex align-items-center"></i></a>
 								</div>
 							</div>
-							<!--feed box bot | text-->
-							<div
-								class="col-12 feed-box-bot hstack p-3 border-top text-muted f13">
-								<div class="col-6 hstack justify-content-center border-end">
-									<span>담기</span>
-								</div>
-								<div class="col-6 hstack justify-content-center">
-									<i class="bi bi-heart"></i><span>좋아요</span><span class="ms-2">9999+</span>
+							<!-- feed box center | Carousel image -->
+							<div class="col-12 overflow-hidden">
+								<div th:id="'feedCarousel'+${feedList.Feed_num}" class="carousel slide" data-bs-ride="false">
+									<div th:if="${#lists.size(#strings.arraySplit(feedList.getFeed_thumbnail(), ','))>
+										 1}" class="carousel-indicators"> <button th:each="thumbnail, thumbnailStat : ${#strings.arraySplit(feedList.getFeed_thumbnail(), ',')}" type="button" th:attr="data-bs-target='#feedCarousel'+${feedList.getFeed_num()}, data-bs-slide-to=${thumbnailStat.index}, class=${thumbnailStat.index==0} ? 'active' : ''" aria-current="true"></button>
+									</div>
+									<!-- carousel items loop -->
+									<div class="carousel-inner">
+										<div th:each="thumbnail, thumbnailStat : ${#strings.arraySplit(feedList.getFeed_thumbnail(), ',')}" class="carousel-item p-0" th:classappend="${thumbnailStat.index==0} ? 'active' : ''">
+											<img th:src="@{'../img/feed_thumbnail/' + ${thumbnail}}" class="d-block w-100" alt="#">
+										</div>
+									</div>
+									<!-- Carousel Prev/Next button -->
+									<div th:if="${#lists.size(#strings.arraySplit(feedList.getFeed_thumbnail(), ','))>
+										 1}"> <button class="carousel-control-prev" type="button" th:attr="data-bs-target='#feedCarousel'+${feedList.getFeed_num()}" data-bs-slide="prev">
+										<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+										<span class="visually-hidden">Previous</span>
+										</button>
+										<button class="carousel-control-next" type="button" th:attr="data-bs-target='#feedCarousel'+${feedList.getFeed_num()}" data-bs-slide="next">
+										<span class="carousel-control-next-icon" aria-hidden="true"></span>
+										<span class="visually-hidden">Next</span>
+										</button>
+									</div>
 								</div>
 							</div>
-							<!-- tag row -->
-							<!-- col -->
+							<!--feed-box-center | text-->
+							<div class="col-12 feed-box-bot p-3">
+								<span class="fw-bold mb-1 d-block" th:text="${feedList.getFeed_title()}">맥주 맛집🍺✨</span>
+								<span class="f13" th:text="${feedList.getFeed_content()}">맥주는 왜 먹어도 먹어도 맛있을까요? </span>
+							</div>
+							<!--feed box bot | #TAG -->
+							<div class="col feed-tag-box p-4 text-muted f13 d-flex gap-1">
+								<span class="btn btn-main btn-sm rounded-pill" th:text="${feedList.getFeed_area()}">지역태그</span>
+								<span class="btn btn-skyb btn-sm rounded-pill" th:text="${feedList.getFeed_theme()}">테마태그</span>
+							</div>
 						</div>
-						<!-- 댓글 -->
-						<div class="col p-4">
-							<p>댓글</p>
-							<div class="d-flex align-items-center gap-2">
-								<div class="col flex-grow-0 p-0">
-									<img
-										th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}"
-										class="float-start rounded-circle border" width="45"
-										height="45" alt=""><input type="hidden"
-										name="Member_profileimage"
-										th:value="${session.Member_profileimage}" />
+						<!--feed box bot | text-->
+						<div class="col-12 feed-box-bot hstack p-3 border-top text-muted f13">
+							<div class="col-6 hstack justify-content-center border-end">
+								<span>담기</span>
+							</div>
+							<div class="col-6 hstack justify-content-center">
+								<i class="bi bi-heart"></i><span>좋아요</span><span class="ms-2">9999+</span>
+							</div>
+						</div>
+						<!-- tag row -->
+						<!-- col -->
+					</form>
+					</div>
+					<!-- 우측 | 댓글 -->
+					<!-- <div class="col p-4">
+					<form th:action="@{'/feed_comment_upload'}" th:object="${feedComment}" method="post">
+						<p>
+							 댓글
+						</p>
+						<div class="d-flex align-items-center gap-2">
+							<div class="col flex-grow-0 p-0">
+								<img th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}" class="float-start rounded-circle border" width="45" height="45" alt="">
+								<input type="hidden" name="Member_profileimage" th:value="${session.Member_profileimage}"/>
+							</div>
+							<div class="col flex-grow-1 p-0">
+								<input type="text" th:field="*{Feed_comment}" class="form-control"/>
+								<th:block th:if="${#fields.hasErrors('Feed_comment')}" th:errors="*{Feed_comment}">이름 에러</th:block>
+							</div>
+							<div class="col-2 flex-shrink-0 d-sm-flex justify-content-end align-items-center p-0 h-100">
+								<button type="submit" class="btn btn-sm btn-dark w-100 h-100 py-2">등록</button>
+							</div>
+						</div>
+						<hr/>
+						사용자 댓글
+						<div class="row gap-3 px-2">
+							<div class="d-flex align-items-start gap-2">
+								<div class="col flex-grow-0 p-0 mt-1">
+									<img th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}" class="float-start rounded-circle border" width="36" height="36" alt=""><input type="hidden" name="Member_profileimage" th:value="${session.Member_profileimage}"/>
+								</div>
+								<div class="col flex-grow-1 p-0 f14">
+									<strong><span class="">장창엽</span></strong><span class="ms-1 text-muted f12">댓글 단 시간</span><span class="f14 d-block">오늘 쫌 힘드네여</span>
+								</div>
+								<div class="col-2 flex-shrink-0 d-sm-flex justify-content-end align-items-center p-0 h-100 mt-1 text-end">
+									<input type="submit" id="feed-heart" class="h-100 py-2 d-none"/><label for="feed-heart"><i class="fi fi-br-heart"></i></label>
+								</div>
+							</div>
+							----------------------------
+							<div class="d-flex align-items-start gap-2">
+								<div class="col flex-grow-0 p-0 mt-1">
+									<img th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}" class="float-start rounded-circle border" width="36" height="36" alt=""><input type="hidden" name="Member_profileimage" th:value="${session.Member_profileimage}"/>
 								</div>
 								<div class="col flex-grow-1 p-0">
-									<input type="text" class="form-control" />
+									<strong><span class="f14 d-block">이지후</span></strong><span class="f14 d-block">저도 힘드네요</span>
 								</div>
-								<div
-									class="col-2 flex-shrink-0 d-sm-flex justify-content-end align-items-center p-0 h-100">
-									<button type="submit"
-										class="btn btn-sm btn-dark w-100 h-100 py-2">등록</button>
-								</div>
-							</div>
-							<hr />
-							<!-- 사용자 댓글 -->
-							<div class="row gap-3 px-2">
-								<div class="d-flex align-items-start gap-2">
-									<div class="col flex-grow-0 p-0 mt-1">
-										<img
-											th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}"
-											class="float-start rounded-circle border" width="36"
-											height="36" alt=""><input type="hidden"
-											name="Member_profileimage"
-											th:value="${session.Member_profileimage}" />
-									</div>
-									<div class="col flex-grow-1 p-0 f14">
-										<strong><span class="">장창엽</span></strong> <span
-											class="ms-1 text-muted f12">댓글 단 시간</span> <span
-											class="f14 d-block">오늘 쫌 힘드네여</span>
-									</div>
-									<div
-										class="col-2 flex-shrink-0 d-sm-flex justify-content-end align-items-center p-0 h-100 mt-1 text-end">
-										<input type="submit" id="feed-herat" class="h-100 py-2 d-none" /><label
-											for="feed-heart"><i class="fi fi-br-heart"></i></label>
-									</div>
-								</div>
-								<!-------------------------------->
-								<div class="d-flex align-items-start gap-2">
-									<div class="col flex-grow-0 p-0 mt-1">
-										<img
-											th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}"
-											class="float-start rounded-circle border" width="36"
-											height="36" alt=""><input type="hidden"
-											name="Member_profileimage"
-											th:value="${session.Member_profileimage}" />
-									</div>
-									<div class="col flex-grow-1 p-0">
-										<strong><span class="f14 d-block">이지후</span></strong> <span
-											class="f14 d-block">저도 힘드네요</span>
-									</div>
-									<div
-										class="col-2 flex-shrink-0 d-sm-flex justify-content-end align-items-center p-0 h-100 mt-1 text-end">
-										<input type="submit" id="feed-herat" class="h-100 py-2 d-none" /><label
-											for="feed-heart"><i class="fi fi-rr-heart"></i></label>
-									</div>
-								</div>
-								<!-------------------------------->
-								<div class="d-flex align-items-start gap-2">
-									<div class="col flex-grow-0 p-0 mt-1">
-										<img
-											th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}"
-											class="float-start rounded-circle border" width="36"
-											height="36" alt=""><input type="hidden"
-											name="Member_profileimage"
-											th:value="${session.Member_profileimage}" />
-									</div>
-									<div class="col flex-grow-1 p-0">
-										<strong><span class="f14 d-block">박검지</span></strong> <span
-											class="f14 d-block">저는 괜찮아요</span>
-									</div>
-									<div
-										class="col-2 flex-shrink-0 d-sm-flex justify-content-end align-items-center p-0 h-100 mt-1 text-end">
-										<button type="button"
-											class="btn btn-close btn-sm rounded-circle"
-											aria-label="Close"></button>
-									</div>
+								<div class="col-2 flex-shrink-0 d-sm-flex justify-content-end align-items-center p-0 h-100 mt-1 text-end">
+									<input type="submit" id="feed-herat" class="h-100 py-2 d-none"/>
+									<label for="feed-heart"><i class="fi fi-br-heart"></i>
+									</label>
 								</div>
 							</div>
-
+							----------------------------
+							<div class="d-flex align-items-start gap-2">
+								<div class="col flex-grow-0 p-0 mt-1">
+									<img th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}" class="float-start rounded-circle border" width="36" height="36" alt="">
+									<input type="hidden" name="Member_profileimage" th:value="${session.Member_profileimage}"/>
+								</div>
+								<div class="col flex-grow-1 p-0">
+									<strong><span class="f14 d-block">박검지</span></strong>
+									<span class="f14 d-block">저는 괜찮아요</span>
+								</div>
+								<div class="col-2 flex-shrink-0 d-sm-flex justify-content-end align-items-center p-0 h-100 mt-1 text-end">
+									<button type="button" class="btn btn-close btn-sm rounded-circle" aria-label="Close"></button>
+								</div>
+								</div>
+							</div>
 						</div>
-					</div>
-					<!-- row -->
+					</form> -->
 				</div>
-				<!---------------------------------------------------------------------------->
-		</form>
+			</div>
+			<!-- row -->
+		</div>
+		<!---------------------------------------------------------------------------->
 	</div>
-	<div th:replace="~{footer/footer::footer}"></div>
+</div>
+<div th:replace="~{footer/footer::footer}">
+</div>
 </body>
 </html>
