24-02-22 | 장창엽 | 밴드 채팅 구현

--- a/src/main/resources/static/css/myBand.css
+++ b/src/main/resources/static/css/myBand.css
@@ -178,5 +178,8 @@ div.band_chat_startBtn{
 }
 
 div.bandChat_listContent{
+	overflow-y : scroll;
+	max-height: 500px;
 	border : 1px solid blue;
+	background-color: #f1f1f1;
 }
