--- a/src/main/resources/templates/thymeleaf/band/bandChat.html
+++ b/src/main/resources/templates/thymeleaf/band/bandChat.html
@@ -102,15 +102,38 @@
                         <img class="search_img" src="../img/common/btn_header_search.png" alt="">
                         <span th:text="${feedwriterImg.getMember_profileimage()}"></span>
                     </div> -->
-                    
+
                     <!-- 채팅박스 -->
                     <div class="bandChat_listBox px-3">
-                    	<div class="bandChat_listTitle bg-skyb py-2 text-center">
+                    	<div class="bandChat_listTitle bg-skyb py-3 text-center">
                     		<span class="text-center f22" th:text="${partnerId}"></span> <br />
                     		<small class="text-muted" th:text="${myBandList.getBand_name()}"></small>
                     	</div>
                     	
-                    	<div class="bandChat_listContent">
+                    	<!-- 채팅 메시지 영역 -->
+                    	<div class="bandChat_listContent py-2">
+                    		<!-- 대화 내용이 없을 때  -->
+                    		<th:block th:if="${ bandChatListSize eq 0 }" >
+                    			<div class="text-center">
+                    				<span class="bg-mainbg border border-white rounded-pill text-center d-inline-block mx-auto my-5 p-1 px-5">상대방과 대화를 시작해보세요.</span>
+                    			</div>
+                    		</th:block>
+                    		
+                    		<div id="bandChatContent" class="d-flex flex-column">
+                    		</div>
+                    	</div>
+                    	
+                    	<!-- 채팅 입력 영역 -->
+                    	<div class="bandCht_input">
+							<div class="row my-3">
+								<div class="col-sm-10">
+									<input type="text" class="py-3 form-control"
+										id="bandChat_userInput" placeholder="보내실 메시지를 입력해주세요.">
+								</div>
+								<div class="col-sm-2">
+									<input type="button" value="전송" class="py-3 w-100 btn btn-outline-warning" id="sendBandChatBtn" />
+								</div>
+							</div>
                     		
                     	</div>
                     </div>
@@ -127,9 +150,16 @@
 
     <div th:replace="~{footer/footer::footer}"></div>
 	
+	
+	<script th:inline="javascript">
+		
+		var chatRoom = /*[[${chatRoom}]]*/ "";
+		var loginId = /*[[${session.Member_Id}]]*/ "";
+		var bandUrl = /*[[${bandUrl}]]*/ "";
+	</script>
     
     <script>
-
+		
 	    function func_deleteFeed(){
 	        var del_confirm = confirm("게시글을 정말 삭제하시겠습니까?");
 	        
@@ -157,6 +187,141 @@
 	    	
 	    }
 	    
+	    
+	    
+		// 페이지가 로드될 때 밴드 채팅 내역을 가져와서 화면에 표시합니다.
+		$(document).ready(function() {
+    // 페이지 로드시 밴드 채팅 내역을 가져오는 함수 호출
+    fetchBandChatList();
+
+    // 5초마다 밴드 채팅 내역을 업데이트하기 위해 setInterval() 함수 사용
+    setInterval(fetchBandChatList, 2000); // 2초마다 업데이트
+    
+    
+});
+
+// 밴드 채팅 내역을 가져오는 함수
+function fetchBandChatList() {
+    $.ajax({
+        url: '/getBandChatList', // Spring Controller에 매핑된 URL
+        type: 'GET',
+        dataType: 'json',
+        success: function(response) {
+            // 서버로부터 받은 데이터를 처리하여 화면에 표시합니다.
+            displayBandChatList(response);
+        },
+        error: function(xhr, status, error) {
+            console.error('Error occurred while fetching band chat list: ' + error);
+        }
+    });
+}
+
+//밴드 채팅 내역을 가져와서 화면에 표시하는 함수
+function fetchAndDisplayBandChatList() {
+    $.ajax({
+        url: '/getBandChatList', // Spring Controller에 매핑된 URL
+        type: 'GET',
+        dataType: 'json',
+        success: function(response) {
+            // 서버로부터 받은 데이터를 처리하여 화면에 표시합니다.
+            displayBandChatList(response);
+        },
+        error: function(xhr, status, error) {
+            console.error('Error occurred while fetching band chat list: ' + error);
+        }
+    });
+}
+
+// 밴드 채팅 내역을 화면에 표시하는 함수
+function displayBandChatList(chatList) {
+    var bandChatContent = $('#bandChatContent');
+    bandChatContent.empty(); // 이전 채팅 내역을 모두 지우고 새로운 채팅 내역을 추가합니다.
+    
+    // 새로 받은 밴드 채팅 내역을 반복하여 화면에 표시합니다.
+    $.each(chatList, function(index, chatItem) {
+        // 각 채팅 아이템에 대한 HTML 요소를 생성합니다.
+        var chatElement = $('<div>').addClass('bandChat_listContent_item');
+        
+        // 로그인한 사용자와 채팅 메시지의 소유자가 같으면 오른쪽 정렬, 아니면 왼쪽 정렬
+        if (chatItem.chat_Id == loginId ) {
+            chatElement.addClass('float-end ms-auto my-2 text-end');
+        } else {
+            chatElement.addClass('float-start d-flex flex-row-reverse me-auto my-2');
+        }
+        
+        // 채팅 내용을 추가합니다.
+        var chatBody = $('<div>').addClass('bandChatList_body d-inline-block');
+        var memberIdBox = $('<div>').addClass('bandChatList_memberIdBox');
+        memberIdBox.append($('<span>').text(chatItem.chat_Id));
+        var messageBox = $('<div>').addClass('bandChatList_messageBox');
+        messageBox.append($('<span>').text(chatItem.chat_message));
+        
+        chatBody.append(memberIdBox).append(messageBox);
+        
+        // 프로필 이미지를 추가합니다.
+        var imgBox = $('<div>').addClass('bandChatList_imgBox d-inline-block mx-3');
+        var profileImg = $('<img>').attr('src', '../img/member_thumbnail/' + chatItem.member_profileimage)
+                                   .attr('alt', '#')
+                                   .css({ 'width': '70px', 'height': '70px' , 'border-radius' : '50%' });
+        imgBox.append(profileImg);
+        
+        // chatElement에 chatBody와 imgBox를 추가합니다.
+        chatElement.append(chatBody).append(imgBox);
+        // chatElement를 bandChatContent에 추가합니다.
+        bandChatContent.append(chatElement);
+    });
+}
+		
+				
+		// 밴드 채팅 메시지를 전송하는 함수
+		function sendBandChat() {
+		    
+			// 입력된 채팅 메시지 가져오기
+		    var bandChatMessage = $('#bandChat_userInput').val().trim();
+			
+		    // 빈 메시지인지 확인
+		    if (!bandChatMessage) {
+		        alert('메시지를 입력하세요.');
+		        return;
+		    }
+			
+		    var dataToSend = {
+		    		 message: bandChatMessage,
+		    		 sendchatRoom : chatRoom,
+		    		 sendLoginId : loginId,
+		    		 sendBandUrl : bandUrl
+		    }
+		    
+		    // AJAX를 통해 채팅 메시지 서버로 전송
+		    $.ajax({
+		        url: '/sendBandChat', // Spring Controller에 매핑된 URL
+		        type: 'POST',
+		        contentType: 'application/json',
+		        data: JSON.stringify(dataToSend ), // 채팅 메시지를 JSON 형태로 전송
+		        success: function(response) {
+		            console.log('채팅 메시지 전송 성공:', response);
+		            // 채팅 메시지 전송 성공 시 처리할 내용을 여기에 작성하세요
+		        },
+		        error: function(xhr, status, error) {
+		            console.error('채팅 메시지 전송 실패:', error);
+		            // 채팅 메시지 전송 실패 시 처리할 내용을 여기에 작성하세요
+		        }
+		    });
+		}
+
+		// 전송 버튼 클릭 시 채팅 메시지 전송
+		$('#sendBandChatBtn').click(function() {
+		    sendBandChat();
+		    $('#bandChat_userInput').val('');
+		});
+
+		// Enter 키 입력 시도 채팅 메시지 전송
+		$('#bandChat_userInput').keypress(function(event) {
+		    if (event.which === 13) {
+		        sendBandChat();
+		        $('#bandChat_userInput').val('');
+		    }
+		});
 	</script>
 </body>
 </html>
